// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-conversation-history Everthing is successful Walkthrough passes in the correct arguments to secretsClient.getSecretValue() 1`] = `
Array [
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-cx",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-cx",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-cx",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-cx",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-cx",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-cx",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-cx",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-cx",
    },
  ],
]
`;

exports[`get-conversation-history Everthing is successful Walkthrough passes in the correct arguments to smooch.appUsers.getMessages() 1`] = `
Array [
  Array [
    Object {
      "appId": "5e31c81640a22c000f5d7f28",
      "userId": "667802d8-2260-436c-958a-2ee0f71f73f1",
    },
  ],
  Array [
    Object {
      "appId": "5e31c81640a22c000f5d7f28",
      "userId": "667802d8-2260-436c-958a-2ee0f71f73f1",
    },
  ],
  Array [
    Object {
      "appId": "5e31c81640a22c000f5d7f28",
      "userId": "667802d8-2260-436c-958a-2ee0f71f73f1",
    },
  ],
  Array [
    Object {
      "appId": "5e31c81640a22c000f5d7f28",
      "userId": "667802d8-2260-436c-958a-2ee0f71f73f1",
    },
  ],
  Array [
    Object {
      "appId": "5e31c81640a22c000f5d7f28",
      "userId": "667802d8-2260-436c-958a-2ee0f71f73f1",
    },
  ],
  Array [
    Object {
      "appId": "5e31c81640a22c000f5d7f28",
      "userId": "667802d8-2260-436c-958a-2ee0f71f73f1",
    },
  ],
  Array [
    Object {
      "appId": "5e31c81640a22c000f5d7f28",
      "userId": "667802d8-2260-436c-958a-2ee0f71f73f1",
    },
  ],
  Array [
    Object {
      "appId": "5e31c81640a22c000f5d7f28",
      "userId": "667802d8-2260-436c-958a-2ee0f71f73f1",
    },
  ],
]
`;

exports[`get-conversation-history Everthing is successful messages are filtered for metadata 1`] = `
Object {
  "body": Object {
    "interactionId": "667802d8-2260-436c-958a-2ee0f71f73f0",
    "messages": Array [
      Object {
        "contentType": undefined,
        "file": Object {
          "mediaSize": undefined,
          "mediaType": undefined,
          "mediaUrl": undefined,
        },
        "from": "mock-customer",
        "id": undefined,
        "quotedMessage": Object {},
        "resourceId": null,
        "text": undefined,
        "timestamp": NaN,
        "type": "customer",
      },
    ],
  },
  "status": 200,
}
`;

exports[`get-conversation-history Everthing is successful messages are filtered for role 'appUser' and type not equal to 'formResponse' 1`] = `
Object {
  "body": Object {
    "interactionId": "667802d8-2260-436c-958a-2ee0f71f73f0",
    "messages": Array [
      Object {
        "contentType": "",
        "file": Object {
          "mediaSize": undefined,
          "mediaType": undefined,
          "mediaUrl": undefined,
        },
        "from": "mock-customer",
        "id": undefined,
        "quotedMessage": Object {},
        "resourceId": null,
        "text": undefined,
        "timestamp": NaN,
        "type": "customer",
      },
    ],
  },
  "status": 200,
}
`;

exports[`get-conversation-history Everthing is successful messages are filtered for type 'formResponse' and quoted messages and are also mapped for type 'formResponse' 1`] = `
Object {
  "body": Object {
    "interactionId": "667802d8-2260-436c-958a-2ee0f71f73f0",
    "messages": Array [
      Object {
        "contentType": "formResponse",
        "file": Object {
          "mediaSize": undefined,
          "mediaType": undefined,
          "mediaUrl": undefined,
        },
        "from": "mock-customer",
        "id": undefined,
        "quotedMessage": Object {
          "content": Object {
            "file": Object {},
            "id": undefined,
            "text": undefined,
            "type": undefined,
          },
        },
        "resourceId": null,
        "text": "collect-message response",
        "timestamp": NaN,
        "type": "customer",
      },
    ],
  },
  "status": 200,
}
`;

exports[`get-conversation-history Everthing is successful messages are mapped for the role 'appMaker' 1`] = `
Object {
  "body": Object {
    "interactionId": "667802d8-2260-436c-958a-2ee0f71f73f0",
    "messages": Array [
      Object {
        "contentType": undefined,
        "file": Object {
          "mediaSize": undefined,
          "mediaType": undefined,
          "mediaUrl": undefined,
        },
        "from": "",
        "id": undefined,
        "quotedMessage": Object {},
        "resourceId": undefined,
        "text": undefined,
        "timestamp": NaN,
        "type": "agent",
      },
    ],
  },
  "status": 200,
}
`;

exports[`get-conversation-history Everthing is successful messages are mapped for the role 'appMaker' and type 'form' 1`] = `
Object {
  "body": Object {
    "interactionId": "667802d8-2260-436c-958a-2ee0f71f73f0",
    "messages": Array [
      Object {
        "contentType": "form",
        "file": Object {
          "mediaSize": undefined,
          "mediaType": undefined,
          "mediaUrl": undefined,
        },
        "from": "",
        "id": undefined,
        "quotedMessage": Object {},
        "resourceId": undefined,
        "text": "collect-message",
        "timestamp": NaN,
        "type": "agent",
      },
    ],
  },
  "status": 200,
}
`;

exports[`get-conversation-history Everthing is successful messages are mapped for the role not equal to 'appMaker' 1`] = `
Object {
  "body": Object {
    "interactionId": "667802d8-2260-436c-958a-2ee0f71f73f0",
    "messages": Array [
      Object {
        "contentType": undefined,
        "file": Object {
          "mediaSize": undefined,
          "mediaType": undefined,
          "mediaUrl": undefined,
        },
        "from": "mock-customer",
        "id": undefined,
        "quotedMessage": Object {},
        "resourceId": null,
        "text": "normal messages",
        "timestamp": NaN,
        "type": "customer",
      },
    ],
  },
  "status": 200,
}
`;

exports[`get-conversation-history Everthing is successful when no filter is applied 1`] = `
Object {
  "body": Object {
    "interactionId": "667802d8-2260-436c-958a-2ee0f71f73f0",
    "messages": Array [],
  },
  "status": 200,
}
`;

exports[`get-conversation-history sends back status 500 if there is an error retrieving cx credentials 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to retrieve cx credentials",
  },
  "status": 500,
}
`;

exports[`get-conversation-history sends back status 500 if there is an error retrieving digital channels credentials (error by SmoochCore) 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to retrieve digital channels credentials",
  },
  "status": 500,
}
`;

exports[`get-conversation-history sends back status 500 when there is a problem fetching interaction messages 1`] = `
Object {
  "body": Object {
    "message": "An error occurred fetching interaction messages",
  },
  "status": 500,
}
`;

exports[`get-conversation-history sends back status 500 when there is an error in retrieving the interaction metadata 1`] = `
Object {
  "body": Object {
    "message": "An error occurred retrieving the interaction metadata",
  },
  "status": 500,
}
`;

exports[`get-conversation-history sends back status 500 when there is an error retrieving digital channels credentials (error by getSecretValue()) 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to retrieve digital channels credentials",
  },
  "status": 500,
}
`;
